--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Movies</string>
+    <string name="network_error">Ocurrió un error, verifica tu conexión</string>
+    <string name="default_error">Ocurrió un error desconocido</string>
 </resources>
